# budgie-netmeter-applet

./: NetMeterApplet.plugin  NetMeterApplet.py  README.md  meson.build  netmetertext.py  style.css
